--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   carousel_slider: ^1.4.1
+  flutter_linkify: ^3.1.3
+  url_launcher: ^5.4.10
 
 dev_dependencies:
   flutter_test:
