--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   carousel_slider: ^1.4.1
   flutter_linkify: ^3.1.3
   url_launcher: ^5.4.10
+  cloud_firestore:
+  firebase_core:
 
 dev_dependencies:
   flutter_test:
